[gd_scene load_steps=3 format=3 uid="uid://bfvimx51shuq2"]

[ext_resource type="Texture2D" uid="uid://bojpi1benclm1" path="res://images/ui/ninepatch.png" id="1_nanu3"]
[ext_resource type="Script" path="res://scripts/ui/equip_ui.gd" id="1_vxwlq"]

[node name="EquipUI" type="VBoxContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -337.0
offset_top = -286.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_vxwlq")

[node name="Inv" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 8

[node name="ScrollContainer" type="ScrollContainer" parent="Inv"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="GridContainer" type="VBoxContainer" parent="Inv/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InvButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 35
text = "Inventory"

[node name="MagicWeapon" type="NinePatchRect" parent="HBoxContainer"]
self_modulate = Color(1, 1, 1, 0.447059)
custom_minimum_size = Vector2(150, 350)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
texture = ExtResource("1_nanu3")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="MagicSprite" type="TextureRect" parent="HBoxContainer/MagicWeapon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Melee Weapon" type="NinePatchRect" parent="HBoxContainer"]
self_modulate = Color(1, 1, 1, 0.466667)
custom_minimum_size = Vector2(150, 350)
layout_mode = 2
mouse_filter = 1
texture = ExtResource("1_nanu3")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="MeleeSprite" type="TextureRect" parent="HBoxContainer/Melee Weapon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Helm" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.466667)
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("1_nanu3")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Armor" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.466667)
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("1_nanu3")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Boots" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.466667)
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("1_nanu3")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[connection signal="gui_input" from="HBoxContainer/MagicWeapon" to="." method="_on_magic_weapon_gui_input"]
[connection signal="gui_input" from="HBoxContainer/Melee Weapon" to="." method="_on_melee_weapon_gui_input"]
